--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
     <version>1.1-SNAPSHOT</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
+    <prerequisites>
+      <maven>2.0.9</maven> <!-- due to plex utils 1.5.6 -->
+    </prerequisites>
     <ciManagement>
       <system>hudson</system>
       <url>http://www.davidkarlsen.com/hudson/</url>
@@ -97,6 +100,11 @@
     </profiles>
     <dependencies>
         <dependency>
+          <groupId>org.codehaus.plexus</groupId>
+          <artifactId>plexus-utils</artifactId>
+          <version>1.5.6</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
@@ -105,6 +113,11 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-project</artifactId>
             <version>2.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.maven</groupId>
+          <artifactId>maven-model</artifactId>
+          <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
