--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <version>1.1-SNAPSHOT</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
+    <description>
+      Handles AspectJ usage within maven.
+      Functionality provided is: weaving of aspects (or existing aspects from libraries) with the test and/or main classes, weaving of pre-existing jars and ajdoc reporting.
+    </description>
     <prerequisites>
       <maven>2.0.9</maven> <!-- due to plex utils 1.5.6 -->
     </prerequisites>
