add issuemanagement section
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@8201 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
       <system>hudson</system>
       <url>http://www.davidkarlsen.com/hudson/</url>
     </ciManagement>
+   <issueManagement>
+    <system>jira</system>
+    <url>http://jira.codehaus.org/browse/MAXISTOOLS</url>
+   </issueManagement>
     <developers>
         <developer>
             <id>kaare</id>
