--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
   <description>
     This plugin supports the wsdl2java and java2wsdl tools from the Apache Axis (1) project.
   </description>
+  <licenses>
+    <license>
+      <name>The MIT License</name>
+      <url>https://svn.codehaus.org/mojo/trunk/mojo/axistools-maven-plugin/LICENSE.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
   <prerequisites>
     <maven>2.0.6</maven>
   </prerequisites>
@@ -57,7 +64,17 @@
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
-      <artifactId>maven-core</artifactId>
+      <artifactId>maven-artifact</artifactId>
+      <version>2.0.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-project</artifactId>
+      <version>2.0.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-plugin-api</artifactId>
       <version>2.0.6</version>
     </dependency>
     <dependency>
