fix copy&paste error
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@8272 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     </ciManagement>
    <issueManagement>
     <system>jira</system>
-    <url>http://jira.codehaus.org/browse/MAXISTOOLS</url>
+    <url>http://jira.codehaus.org/browse/MASPECTJ</url>
    </issueManagement>
     <developers>
         <developer>
