add notifier config
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/axistools-maven-plugin@8275 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,9 @@
         <sendOnFailure>true</sendOnFailure>
         <sendOnSuccess>true</sendOnSuccess>
         <sendOnWarning>true</sendOnWarning>
+        <configuration>
+          <address>david@codehaus.org</address>
+        </configuration>
       </notifier>
     </notifiers>
   </ciManagement>
