--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,11 @@
   <artifactId>axistools-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Axis Tools Plugin</name>
-  <version>1.2</version>
+  <version>1.3-SNAPSHOT</version>
   <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/tags/axistools-maven-plugin-1.2</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/axistools-maven-plugin-1.2</developerConnection>
-    <tag>http://svn.codehaus.org/mojo/tags/</tag>
-    <url>http://fisheye.codehaus.org/browse/mojo/tags/axistools-maven-plugin-1.2</url>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/axistools-maven-plugin/</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/axistools-maven-plugin/</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/axistools-maven-plugin</url>
   </scm>
   <description>
     This plugin supports the wsdl2java and java2wsdl tools from the Apache Axis (1) project.
