--- a/src/it/java2wsdl/pom.xml
+++ b/src/it/java2wsdl/pom.xml
@@ -18,6 +18,7 @@
   <groupId>org.codehaus.mojo.axistools</groupId>
   <artifactId>wsdl2java-it-test</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
   <build>
     <plugins>
       <plugin>
@@ -41,5 +42,13 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <dependency>
+      <groupId>axis</groupId>
+      <artifactId>axis</artifactId>
+      <version>1.4</version>
+      <scope>runtime</scope>
+    </dependency>
+  </dependencies>
 </project>
 
