--- a/src/it/java2wsdl/pom.xml
+++ b/src/it/java2wsdl/pom.xml
@@ -33,6 +33,7 @@
             </goals>
             <configuration>
               <filename>test.wsdl</filename>
+              <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/services</outputDirectory>
               <typeMappingVersion>1.2</typeMappingVersion>
               <classOfPortType>org.codehaus.mojo.axistools.test.java2wsdl.ServiceImpl</classOfPortType>
               <location>http://localhost/services</location>
