--- a/pom.xml
+++ b/pom.xml
@@ -158,16 +158,11 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-changelog-plugin</artifactId>
-        <version>2.1</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
         <version>2.1</version>
         <configuration>
-          <columnNames>Key,Summary,Status,Resolution,Assignee,Type,Version,Fix
-            Version</columnNames>
+          <columnNames>Key,Summary,Status,Resolution,Assignee,Type,Version,Fix Version</columnNames>
+          <sortColumnNames>Fix Version</sortColumnNames>
           <generateJiraAnnouncement>true</generateJiraAnnouncement>
           <urlDownload>${project.url}</urlDownload>
           <toAddresses>
