--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
   <profiles>
     <profile>
       <id>integration-test</id>
+      <activation>
+        <property>
+          <name>shit</name>
+          <value>true</value>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
