o Adopted Maven convention for IT profile o Added build output to svn:igore
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/axistools-maven-plugin@8779 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
   </dependencies>
   <profiles>
     <profile>
-      <id>integration-test</id>
+      <id>run-its</id>
       <activation>
         <property>
           <name>shit</name>
