--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,18 @@
   <!--
-    /* 
+    /*
     * Copyright 2005-2008 The Codehaus. 
-    * 
-    * Licensed under the Apache License, Version 2.0 (the "License"); 
-    * you may not use this file except in compliance with the License. 
-    * You may obtain a copy of the License at 
-    * 
-    * http://www.apache.org/licenses/LICENSE-2.0 
-    * 
-    * Unless required by applicable law or agreed to in writing, software 
-    * distributed under the License is distributed on an "AS IS" BASIS, 
-    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
-    * See the License for the specific language governing permissions and 
-    * limitations under the License. 
+    *
+    * Licensed under the Apache License, Version 2.0 (the "License");
+    * you may not use this file except in compliance with the License.
+    * You may obtain a copy of the License at
+    *
+    * http://www.apache.org/licenses/LICENSE-2.0
+    *
+    * Unless required by applicable law or agreed to in writing, software
+    * distributed under the License is distributed on an "AS IS" BASIS,
+    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    * See the License for the specific language governing permissions and
+    * limitations under the License.
     */
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -24,7 +24,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>axistools-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <name>Maven Axis Tools Plugin</name>
+  <name>Axis Tools Maven Plugin</name>
   <version>1.4-SNAPSHOT</version>
   <scm>
     <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/axistools-maven-plugin/</connection>
