move to maven-invoker-plugin
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/axistools-maven-plugin@9420 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/it/java2wsdl/pom.xml
+++ b/src/it/java2wsdl/pom.xml
@@ -24,7 +24,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>axistools-maven-plugin</artifactId>
-        <version>testing</version>
+        <version>@pom.version@</version>
         <executions>
           <execution>
             <id>java2wsdl</id>
