--- a/pom.xml
+++ b/pom.xml
@@ -99,28 +99,40 @@
   <profiles>
     <profile>
       <id>run-its</id>
-      <activation>
-        <property>
-          <name>shit</name>
-          <value>true</value>
-        </property>
-      </activation>
       <build>
         <plugins>
           <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>shitty-maven-plugin</artifactId>
-            <version>1.0-alpha-3</version>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-invoker-plugin</artifactId>
+            <version>1.3</version>
+            <configuration>
+              <debug>true</debug>
+              <projectsDirectory>src/it</projectsDirectory>
+              <pomIncludes>
+                <pomInclude>**/pom.xml</pomInclude>
+              </pomIncludes>
+              <postBuildHookScript>validate</postBuildHookScript>
+              <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
+              <goals>
+                <goal>clean</goal>
+                <goal>package</goal>
+              </goals>
+              <settingsFile>src/it/settings.xml</settingsFile>
+               
+              <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+              <cloneAllFiles>true</cloneAllFiles>
+              
+            </configuration>
             <executions>
               <execution>
+                <id>integration-test</id>
                 <goals>
-                  <goal>clean</goal>
                   <goal>install</goal>
-                  <goal>test</goal>
+                  <goal>run</goal>
                 </goals>
               </execution>
             </executions>
-          </plugin>
+          </plugin>  
         </plugins>
       </build>
     </profile>
