--- a/src/it/subPackageByFileName/pom.xml
+++ b/src/it/subPackageByFileName/pom.xml
@@ -19,7 +19,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>axistools-maven-plugin</artifactId>
-        <version>testing</version>
+        <version>@pom.version@</version>
         <executions>
           <execution>
             <id>wsdl2java</id>
