o Fixed tests due to r9855
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@9924 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@
           <artifactId>maven-model</artifactId>
           <version>2.0</version>
         </dependency>
+        <!-- NOTE: If the AspectJ dependencies are updated, be sure to update the tests CompilerMojoTestBase and AjcReportMojoTest as well! -->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
