[maven-release-plugin] prepare release aspectj-maven-plugin-1.2
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@10127 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>aspectj-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>AspectJ compiler Maven Plugin</name>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
     <description>
@@ -223,4 +223,10 @@
           </plugin>
         </plugins>
     </reporting>
+
+  <scm>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.2</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.2</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/tags/aspectj-maven-plugin-1.2</url>
+  </scm>
 </project>
