--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,11 @@
             <artifactId>maven-artifact</artifactId>
             <version>2.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
     <reporting>
         <plugins>
