--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <parent>
       <groupId>org.codehaus.mojo</groupId>
       <artifactId>mojo-parent</artifactId>
-      <version>23</version>
+      <version>22</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>aspectj-maven-plugin</artifactId>
@@ -11,6 +11,9 @@
     <version>1.3-SNAPSHOT</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
+    <properties>
+      <aspectj.version>1.6.7</aspectj.version>
+    </properties>
     <scm>
       <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
       <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</developerConnection>
@@ -172,13 +175,13 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.6.5</version>
+            <version>${aspectj.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjtools</artifactId>
-            <version>1.6.5</version>
+            <version>${aspectj.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
