--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,16 @@
     <artifactId>aspectj-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>AspectJ compiler Maven Plugin</name>
-    <version>1.3</version>
+    <version>1.4-SNAPSHOT</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
     <properties>
       <aspectj.version>1.6.7</aspectj.version>
     </properties>
     <scm>
-      <connection>scm:svn:http://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.3</connection>
-      <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.3</developerConnection>
-      <url>http://fisheye.codehaus.org/browse/mojo/tags/aspectj-maven-plugin-1.3</url>
+      <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
+      <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</developerConnection>
+      <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
     </scm>
     <description>
       Handles AspectJ usage within maven.
