add aspectj users list to annouce plugin
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@11595 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,7 @@
                 <toAddress>dev@mojo.codehaus.org</toAddress>
                 <toAddress>user@mojo.codehaus.org</toAddress>
                 <toAddress>users@maven.apache.org</toAddress>
+                <toAddress>aspectj-users@eclipse.org</toAddress>
               </toAddresses>
             </configuration>
           </plugin>
