Fix MASPECTJ-90: Classpath on aspectJ plugin doesn't respect the dependencies order. Contributed by Marvin Froeder
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@13180 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
           </roles>
           <timezone>+1</timezone>
         </contributor>
+        <contributor>
+            <name>Marvin Froeder</name>
+            <email>velo.br@gmail.com</email>
+            <timezone>-3</timezone>
+        </contributor>
     </contributors>
     <licenses>
         <license>
