--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
     <properties>
-      <aspectj.version>1.6.7</aspectj.version>
+      <!-- NOTE: If the AspectJ dependencies are updated, be sure to update the tests CompilerMojoTestBase and AjcReportMojoTest as well! -->
+      <aspectj.version>1.6.10</aspectj.version>
     </properties>
     <scm>
       <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
