--- a/pom.xml
+++ b/pom.xml
@@ -1,246 +1,277 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-      <groupId>org.codehaus.mojo</groupId>
-      <artifactId>mojo-parent</artifactId>
-      <version>27</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>aspectj-maven-plugin</artifactId>
-    <packaging>maven-plugin</packaging>
-    <name>AspectJ compiler Maven Plugin</name>
-    <version>1.4-SNAPSHOT</version>
-    <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
-    <inceptionYear>2005</inceptionYear>
-    <properties>
-      <!-- NOTE: If the AspectJ dependencies are updated, be sure to update the tests CompilerMojoTestBase and AjcReportMojoTest as well! -->
-      <aspectj.version>1.6.10</aspectj.version>
-    </properties>
-    <scm>
-      <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
-      <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</developerConnection>
-      <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
-    </scm>
-    <description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>mojo-parent</artifactId>
+    <version>27</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>aspectj-maven-plugin</artifactId>
+  <packaging>maven-plugin</packaging>
+  <name>AspectJ compiler Maven Plugin</name>
+  <version>1.4-SNAPSHOT</version>
+  <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
+  <inceptionYear>2005</inceptionYear>
+  <properties>
+    <!-- NOTE: If the AspectJ dependencies are updated, be sure to update 
+      the tests CompilerMojoTestBase and AjcReportMojoTest as well! -->
+    <aspectj.version>1.6.10</aspectj.version>
+  </properties>
+  <scm>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
+  </scm>
+  <description>
       Handles AspectJ usage within maven.
       Functionality provided is: weaving of aspects (or existing aspects from libraries) with the test and/or main classes, weaving of pre-existing jars and ajdoc reporting.
     </description>
-    <prerequisites>
-      <maven>2.0.6</maven> <!-- due to plex utils 1.5.6 -->
-    </prerequisites>
-    <ciManagement>
-      <system>hudson</system>
-      <url>http://www.davidkarlsen.com/hudson/</url>
-      <notifiers>
-        <notifier>
-          <type>mail</type>
-          <sendOnError>true</sendOnError>
-          <sendOnFailure>true</sendOnFailure>
-          <sendOnSuccess>true</sendOnSuccess>
-          <sendOnWarning>true</sendOnWarning>
-          <configuration>
-            <address>david@codehaus.org</address>
-          </configuration>
-        </notifier>
-      </notifiers>
-    </ciManagement>
-   <issueManagement>
+  <prerequisites>
+    <maven>2.0.6</maven> <!-- due to plex utils 1.5.6 -->
+  </prerequisites>
+  <ciManagement>
+    <system>hudson</system>
+    <url>http://www.davidkarlsen.com/hudson/</url>
+    <notifiers>
+      <notifier>
+        <type>mail</type>
+        <sendOnError>true</sendOnError>
+        <sendOnFailure>true</sendOnFailure>
+        <sendOnSuccess>true</sendOnSuccess>
+        <sendOnWarning>true</sendOnWarning>
+        <configuration>
+          <address>david@codehaus.org</address>
+        </configuration>
+      </notifier>
+    </notifiers>
+  </ciManagement>
+  <issueManagement>
     <system>jira</system>
     <url>http://jira.codehaus.org/browse/MASPECTJ</url>
-   </issueManagement>
-    <developers>
-        <developer>
-            <id>kaare</id>
-            <name>Kaare Nilsen</name>
-            <email>kaare.nilsen@gmail.com</email>
-            <organization>Arktekk</organization>
-            <organizationUrl>http://arktekk.no</organizationUrl>
-            <roles>
-                <role>Java Developer</role>
-            </roles>
-            <timezone>+1</timezone>
-        </developer>
-    </developers>
-    <contributors>
-        <contributor>
-            <name>Thor Age Eldby</name>
-            <email>tel@objectnet.no</email>
-            <roles>
-                <role>Java Developer</role>
-            </roles>
-            <timezone>+1</timezone>
-        </contributor>
-        <contributor>
-          <name>David J. M. Karlsen</name>
-          <email>david@codehaus.org</email>
-          <organization>davidkarlsen.com</organization>
-          <organizationUrl>http://www.davidkarlsen.com</organizationUrl>
-          <url>http://xircles.codehaus.org/users/david</url>
-          <roles>
-            <role>Java Developer</role>
-          </roles>
-          <timezone>+1</timezone>
-        </contributor>
-        <contributor>
-            <name>Marvin Froeder</name>
-            <email>velo.br@gmail.com</email>
-            <timezone>-3</timezone>
-        </contributor>
-    </contributors>
-    <licenses>
-        <license>
-            <name>The MIT License</name>
-            <url>LICENSE.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-    <build>
-        <plugins>
-           <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skip>false</skip>
-                    <excludes>
-                        <exclude>**/test-project/**/*.java</exclude>
-                        <exclude>
-                            **/parent-child-test-project/**/*.java
+  </issueManagement>
+  <developers>
+    <developer>
+      <id>kaare</id>
+      <name>Kaare Nilsen</name>
+      <email>kaare.nilsen@gmail.com</email>
+      <organization>Arktekk</organization>
+      <organizationUrl>http://arktekk.no</organizationUrl>
+      <roles>
+        <role>Java Developer</role>
+      </roles>
+      <timezone>+1</timezone>
+    </developer>
+  </developers>
+  <contributors>
+    <contributor>
+      <name>Thor Age Eldby</name>
+      <email>tel@objectnet.no</email>
+      <roles>
+        <role>Java Developer</role>
+      </roles>
+      <timezone>+1</timezone>
+    </contributor>
+    <contributor>
+      <name>David J. M. Karlsen</name>
+      <email>david@codehaus.org</email>
+      <organization>davidkarlsen.com</organization>
+      <organizationUrl>http://www.davidkarlsen.com</organizationUrl>
+      <url>http://xircles.codehaus.org/users/david</url>
+      <roles>
+        <role>Java Developer</role>
+      </roles>
+      <timezone>+1</timezone>
+    </contributor>
+    <contributor>
+      <name>Marvin Froeder</name>
+      <email>velo.br@gmail.com</email>
+      <timezone>-3</timezone>
+    </contributor>
+  </contributors>
+  <licenses>
+    <license>
+      <name>The MIT License</name>
+      <url>LICENSE.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+          <excludes>
+            <exclude>**/test-project/**/*.java</exclude>
+            <exclude>
+              **/parent-child-test-project/**/*.java
                         </exclude>
-                        <exclude>**/AbstractAjcMojoTest.java</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <profiles>
-        <profile>
-            <id>default-tools.jar</id>
-            <activation>
-                <property>
-                    <name>java.vendor</name>
-                    <value>Sun Microsystems Inc.</value>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>com.sun</groupId>
-                    <artifactId>tools</artifactId>
-                    <version>1.4.2</version>
-                    <scope>system</scope>
-                    <systemPath>
+            <exclude>**/AbstractAjcMojoTest.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-invoker-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>install</goal>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <projectsDirectory>src/it</projectsDirectory>
+          <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+          <postBuildHookScript>verify</postBuildHookScript>
+          <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
+          <goals>
+            <goal>clean</goal>
+            <goal>test</goal>
+          </goals>
+          <settingsFile>src/it/settings.xml</settingsFile>
+          <debug>true</debug>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <profiles>
+    <profile>
+      <id>default-tools.jar</id>
+      <activation>
+        <property>
+          <name>java.vendor</name>
+          <value>Sun Microsystems Inc.</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.4.2</version>
+          <scope>system</scope>
+          <systemPath>
                         ${java.home}/../lib/tools.jar
                     </systemPath>
-                </dependency>
-            </dependencies>
-        </profile>
-      <profile>
-        <id>maven-repo-local</id>
-        <activation>
-          <property>
-            <name>maven.repo.local</name>
-          </property>
-        </activation>
-        <build>
-          <plugins>
-           <plugin>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <configuration>
-                <systemProperties>
-                  <property>
-                    <!-- Pass this through to the tests (if set!) to have them pick the right repository -->
-                    <name>maven.repo.local</name>
-                    <value>${maven.repo.local}</value>
-                  </property>
-                </systemProperties>
-              </configuration>
-            </plugin>
-          </plugins>
-        </build>
-      </profile>
-    </profiles>
-    <dependencies>
-        <dependency>
-          <groupId>org.codehaus.plexus</groupId>
-          <artifactId>plexus-utils</artifactId>
-          <version>1.5.15</version>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-project</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.maven</groupId>
-          <artifactId>maven-model</artifactId>
-          <version>2.0</version>
-        </dependency>
-        <!-- NOTE: If the AspectJ dependencies are updated, be sure to update the tests CompilerMojoTestBase and AjcReportMojoTest as well! -->
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>${aspectj.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjtools</artifactId>
-            <version>${aspectj.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.reporting</groupId>
-            <artifactId>maven-reporting-api</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-embedder</artifactId>
-            <version>2.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.reporting</groupId>
-            <artifactId>maven-reporting-impl</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-artifact</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.4</version>
-        </dependency>
-    </dependencies>
-    <reporting>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>maven-repo-local</id>
+      <activation>
+        <property>
+          <name>maven.repo.local</name>
+        </property>
+      </activation>
+      <build>
         <plugins>
           <plugin>
-            <artifactId>maven-plugin-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-changes-plugin</artifactId>
-            <version>2.3</version>
+            <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <urlDownload>${project.url}</urlDownload>
-              <columnNames>Key,Summary,Status,Resolution,Assignee,Type,Version,Fix Version</columnNames>
-              <generateJiraAnnouncement>true</generateJiraAnnouncement>
-              <toAddresses>
-                <toAddress>dev@mojo.codehaus.org</toAddress>
-                <toAddress>user@mojo.codehaus.org</toAddress>
-                <toAddress>users@maven.apache.org</toAddress>
-                <toAddress>aspectj-users@eclipse.org</toAddress>
-              </toAddresses>
+              <systemProperties>
+                <property>
+                  <!-- Pass this through to the tests (if set!) to have them 
+                    pick the right repository -->
+                  <name>maven.repo.local</name>
+                  <value>${maven.repo.local}</value>
+                </property>
+              </systemProperties>
             </configuration>
           </plugin>
         </plugins>
-    </reporting>
+      </build>
+    </profile>
+  </profiles>
+  <dependencies>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>1.5.15</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-project</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-model</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <!-- NOTE: If the AspectJ dependencies are updated, be sure to update 
+      the tests CompilerMojoTestBase and AjcReportMojoTest as well! -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>${aspectj.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjtools</artifactId>
+      <version>${aspectj.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-plugin-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.reporting</groupId>
+      <artifactId>maven-reporting-api</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-embedder</artifactId>
+      <version>2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.reporting</groupId>
+      <artifactId>maven-reporting-impl</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-artifact</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.4</version>
+    </dependency>
+  </dependencies>
+  <reporting>
+    <plugins>
+      <plugin>
+        <artifactId>maven-plugin-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-changes-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <urlDownload>${project.url}</urlDownload>
+          <columnNames>Key,Summary,Status,Resolution,Assignee,Type,Version,Fix
+            Version</columnNames>
+          <generateJiraAnnouncement>true</generateJiraAnnouncement>
+          <toAddresses>
+            <toAddress>dev@mojo.codehaus.org</toAddress>
+            <toAddress>user@mojo.codehaus.org</toAddress>
+            <toAddress>users@maven.apache.org</toAddress>
+            <toAddress>aspectj-users@eclipse.org</toAddress>
+          </toAddresses>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
