--- a/src/it/NoMainSourceWeave/pom.xml
+++ b/src/it/NoMainSourceWeave/pom.xml
@@ -28,7 +28,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>compile</goal>
+              <goal>test-compile</goal>
             </goals>
           </execution>
         </executions>
