--- a/src/it/Xlint/pom.xml
+++ b/src/it/Xlint/pom.xml
@@ -16,6 +16,11 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugin</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
         <version>@project.version@</version>
