--- a/src/it/AjcTestCompilerUsingCorrectClasspath/pom.xml
+++ b/src/it/AjcTestCompilerUsingCorrectClasspath/pom.xml
@@ -22,7 +22,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugin</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
       </plugin>
