--- a/src/it/CreateReport/pom.xml
+++ b/src/it/CreateReport/pom.xml
@@ -16,7 +16,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugin</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
       </plugin>
