--- a/src/it/XhasMember/pom.xml
+++ b/src/it/XhasMember/pom.xml
@@ -9,7 +9,7 @@
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
-      <version>@aspectj.version@</version>
+      <version>@aspectjVersion@</version>
     </dependency>
   </dependencies>
 
