[MASPECTJ-100] Add support resource bundles for the report
- Add a localization report

git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@14606 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,16 @@
           </toAddresses>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>l10n-maven-plugin</artifactId>
+        <version>1.0-alpha-2</version>
+        <configuration>
+          <locales>
+            <locale>nl</locale>
+          </locales>
+        </configuration>
+      </plugin>
     </plugins>
   </reporting>
 </project>
