MASPECTJ-100: Added Swedish to the l10n-maven-plugin report
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@14610 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -295,6 +295,7 @@
         <configuration>
           <locales>
             <locale>nl</locale>
+            <locale>se</locale>
           </locales>
         </configuration>
       </plugin>
