Use the correct locale suffix for the Swedish resource bundle.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@14611 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -295,7 +295,7 @@
         <configuration>
           <locales>
             <locale>nl</locale>
-            <locale>se</locale>
+            <locale>sv</locale>
           </locales>
         </configuration>
       </plugin>
