Fix MASPECTJ-108: Java 1.7 source code not supported
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@18201 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
       <email>velo.br@gmail.com</email>
       <timezone>-3</timezone>
     </contributor>
+    <contributor>
+      <name>Krzysztof Debski</name>
+      <email>kdebski85@gmail.com</email>
+      <timezone>+1</timezone>
+    </contributor>
   </contributors>
   <licenses>
     <license>
