[MASPECTJ-129] Change name on site to "Mojo's AspectJ Maven Plugin"
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@18954 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <version>1.7-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
-  <name>AspectJ compiler Maven Plugin</name>
+  <name>Mojo's AspectJ Maven Plugin</name>
   <description>
     Handles AspectJ usage within Maven.
     Functionality provided is: weaving of aspects (or existing aspects from libraries) with the
